# spanum

./: .readthedocs.yaml  README.md  numbers_to_words.py  pyproject.toml  words_to_numbers.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst
spanum/: numbers_to_words.py  words_to_numbers.py
tests/: test_data.csv  test_spanum.py
